mojo: Fix warning (treated as error) on Windows perf bots

BUG=627311

Review-Url: https://codereview.chromium.org/2146683002
Cr-Commit-Position: refs/heads/master@{#404911}

Former-commit-id: 36e092e1f652b5a06a2042e274677ddfa21784ff